--- a/.github/workflows/build-and-deploy-on-push.yml
+++ b/.github/workflows/build-and-deploy-on-push.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  AWS_ACCESS_KEY_ID: AKIAXAK5ZJPSORPJOPOK
+  AWS_ACCESS_KEY_ID: AKIAXAK5ZJPSK6JYSQV5
   AWS_DEFAULT_REGION: ap-northeast-1
   IMAGE_TAG: latest
   CDN_DISTRIBUTION_ID: E1WWDSKZ2AHJRC
