--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "blog.yong-ju.me",
   "version": "1.0.0",
   "description": "",
-  "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "textlint": "^11.7.7",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1"
   },
@@ -15,5 +20,8 @@
     "url": "git+https://github.com/sei40kr/blog.yong-ju.me.git"
   },
   "author": "Seong Yong-ju",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "tailwindcss": "^3.0.18"
+  }
 }
