--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Setup Hugo
-      - uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 0.92.0
 
