--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 0.92.0
+          extended: true
 
       - uses: actions/cache@v2
         with:
