--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog.yong-ju.me",
+  "name": "yong-ju.blog",
   "version": "1.0.0",
   "description": "",
   "devDependencies": {
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sei40kr/blog.yong-ju.me.git"
+    "url": "git+https://github.com/sei40kr/yong-ju.blog.git"
   },
   "author": "Seong Yong-ju",
   "license": "UNLICENSED",
