--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-qwik": "^1.5.3",
     "glob": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "katex": "^0.16.10",
     "prettier": "^3.2.5",
     "rehype-katex": "^7.0.0",
