--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           aws-region: ap-northeast-1
 
       - run: bun install
+      - run: bun run prebuild.pandacss
       - run: bun run build.server
 
       - name: Deploy
