--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "katex": "^0.16.10",
     "prettier": "^3.2.5",
     "rehype-katex": "^7.0.0",
+    "rehype-slug": "6",
     "remark-math": "^6.0.0",
     "typescript": "5.4.5",
     "undici": "*",
